--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -48,6 +48,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           tag_name: ${{ github.ref }}
-          release_name: ${{ steps.git.output.RELEASE_NAME }}
+          release_name: "${{ steps.git.outputs.RELEASE_NAME }}"
           body: "${{ steps.git.outputs.RELEASE_BODY }}"
           prerelease: true
